--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -25,7 +25,7 @@
       <p class="mt-1">
         {% if item.orders[0].status == 'sold' %}
         <span class="line-through">{{ item.price | pricify_cents }}</span>
-        <span class="font-bold">&mdash; Sold</span>
+        <span class="font-semibold">&mdash; Sold</span>
         {% else %}
         <span class="text-lg">{{ item.price | pricify_cents }}</span>
         {% endif %}
