--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -5,14 +5,14 @@
 </div>
 <div class="lg:flex-grow lg:min-w-0">
   <div class="max-w-xl">
-    <div class="md:flex justify-between mb-6">
-      <div class="mb-4 md:mb-0 flex-none">
+    <div class="justify-between mb-6 md:flex">
+      <div class="flex-none mb-4 md:mb-0">
         <img src="https://img.icons8.com/cotton/2x/person-male.png"
-          alt="" class="mx-auto md:mx-0 rounded-full w-40 h-40 shadow">
+          alt="" class="w-40 h-40 mx-auto rounded-full shadow md:mx-0">
       </div>
-      <div class="md:ml-8 flex-grow min-w-0">
+      <div class="flex-grow min-w-0 md:ml-8">
         <div class="flex justify-between">
-          <h3 class="mr-6 min-w-0">
+          <h3 class="min-w-0 mr-6">
             <span class="text-2xl font-semibold break-words">
               {{user.first_name}}
             </span>
@@ -24,8 +24,8 @@
       </div>
     </div>
     <section class="mb-4">
-      <header class="md:flex md:justify-between mb-2">
-        <h4 class="font-bold text-black text-lg  md:mr-6">
+      <header class="mb-2 md:flex md:justify-between">
+        <h4 class="text-lg font-semibold md:mr-6">
           Account
         </h4>
         <div class="md:ml-auto">
