--- a/app/views/pages/items/create.liquid
+++ b/app/views/pages/items/create.liquid
@@ -19,10 +19,9 @@ method: post
       include 'redirect_to', url: url, notice: 'app.items.created'
     endif
   else
-    include 'lib/queries/categories'
+    function_rc filters = 'lib/search/filters', query: context.params 
     include 'lib/queries/presigned_url'
-
-    include 'theme/simple/items/new', item: context.exports.object, lib: context.exports.lib
+    include 'theme/simple/items/new', item: context.exports.object, lib: filters
   endif
 %}
 
