--- a/app/views/pages/items/edit.liquid
+++ b/app/views/pages/items/edit.liquid
@@ -1,13 +1,13 @@
 {% liquid
   include 'lib/must_be_authenticated'
 
-  include 'lib/queries/categories'
+  function_rc filters = 'lib/search/filters'
   include 'lib/queries/items/find', id: context.params.id
 
   include 'lib/can_edit', user_id: context.current_user.id, item: context.exports.item
   include 'lib/queries/presigned_url'
   if context.exports.item
-    include 'theme/simple/items/edit', item: context.exports.item, lib: context.exports.lib
+    include 'theme/simple/items/edit', item: context.exports.item, lib: filters
   else
     include 'theme/simple/items/404'
   endif
