--- a/app/views/pages/items/update.liquid
+++ b/app/views/pages/items/update.liquid
@@ -7,6 +7,8 @@ method: post
   include 'lib/queries/items/find', id: context.params.item.id
   include 'lib/can_edit', user_id: context.current_user.id, item: context.exports.item
 
+  echo context.params.item
+
   include 'lib/commands/items/update/build', object: context.params.item
   include 'lib/commands/items/update/check', object: context.exports.object
 
