--- a/app/views/partials/lib/commands/items/create/build.liquid
+++ b/app/views/partials/lib/commands/items/create/build.liquid
@@ -6,7 +6,7 @@
     "tags":        {{ object.tags | downcase | split: ',' | uniq }},
     "description": {{ object.description | default: "" | json }},
     "category":    {{ object.category | default: "" | json }},
-    "price":       {{ object.price | to_positive_integer: 1 | times: 100 }},
+    "price":       {{ object.price | plus: 0 | times: 100 | to_positive_integer: 1 }}
     "uuid":        {{ object.uuid | json }}
   }
 {% endparse_json %}
