--- a/app/views/pages/items/new.liquid
+++ b/app/views/pages/items/new.liquid
@@ -1,8 +1,8 @@
 {% liquid
   include 'lib/must_be_authenticated'
 
-  function_rc filters = 'lib/search/filters', query: context.params
-  include 'lib/queries/presigned_url'
+  function_rc filters = 'lib/data/queries/search/filters', query: context.params
+  function_rc presigned_url = 'lib/data/queries/presigned_url'
 
-  include 'theme/simple/items/new', lib: filters
+  include 'theme/simple/items/new', lib: filters, presigned_url: presigned_url, user: context.current_user
 %}
