--- a/app/views/partials/lib/data/queries/items/find.liquid
+++ b/app/views/partials/lib/data/queries/items/find.liquid
@@ -1,4 +1,10 @@
 {% liquid
-  graphql item  = 'items/search', id: id, limit: 1, withOrders: withOrders | fetch: 'items' | fetch: 'results' | first
-  export item
+
+  unless id
+    return_rc null
+  endunless
+
+  graphql r  = 'items/search', id: id, limit: 1, withOrders: withOrders
+
+  return_rc r.items.results.first
 %}
