--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -82,4 +82,4 @@
 
 </div>
 
-{% include 'theme/simple/items/uppy_form', item_uuid: item_uuid %}
+{% include 'theme/simple/items/uppy_form', item_uuid: item_uuid, presigned_url: presigned_url, user_id: user.id %}
