--- a/app/views/pages/items/edit.liquid
+++ b/app/views/pages/items/edit.liquid
@@ -1,14 +1,17 @@
 {% liquid
   include 'lib/must_be_authenticated'
 
-  function_rc filters = 'lib/search/filters'
-  include 'lib/queries/items/find', id: context.params.id
+  function_rc item = 'lib/data/queries/items/find', id: params.id
 
-  include 'lib/can_edit', user_id: context.current_user.id, item: context.exports.item
-  include 'lib/queries/presigned_url'
-  if context.exports.item
-    include 'theme/simple/items/edit', item: context.exports.item, lib: filters
-  else
-    include 'theme/simple/items/404'
-  endif
+  unless item.id
+    render 'theme/simple/404', status: 404
+    break
+  endunless
+
+  include 'lib/can_edit', user_id: context.current_user.id, item: item
+
+  function_rc filters = 'lib/data/queries/search/filters'
+  function_rc presigned_url = 'lib/data/queries/presigned_url'
+
+  include 'theme/simple/items/edit', item: item, lib: filters, presigned_url: presigned_url
 %}
