--- a/app/views/pages/items/update.liquid
+++ b/app/views/pages/items/update.liquid
@@ -24,9 +24,9 @@ method: post
       include 'redirect_to', url: url, notice: 'app.items.updated'
     endif
   else
-    function_rc filters = 'lib/search/filters', query: context.params
-    include 'lib/queries/presigned_url'
+    function_rc filters = 'lib/data/queries/search/filters', query: context.params
+    function_rc presigned_url = 'lib/data/queries/presigned_url'
 
-    include 'theme/simple/items/edit', item: context.exports.object, lib: filters
+    include 'theme/simple/items/edit', item: context.exports.object, lib: filters, presigned_url: presigned_url
   endif
 %}
