Fix title in admin page

--- a/app/views/pages/admin.html.liquid
+++ b/app/views/pages/admin.html.liquid
@@ -15,4 +15,4 @@
 %}
 
 {% include 'theme/simple/admin/menu' %}
-{% include 'theme/simple/admin/recent', list: list, title: section %}
+{% include 'theme/simple/admin/recent', list: list, section: query.section %}
