--- a/app/views/partials/lib/commands/marketplace_setup/create/call.liquid
+++ b/app/views/partials/lib/commands/marketplace_setup/create/call.liquid
@@ -2,8 +2,8 @@
   function_rc object = 'lib/commands/marketplace_setup/create/validate', object: constants
   if object.valid
     include 'lib/commands/marketplace_setup/create/save', object: context.exports.object
-    include 'modules/stripe/lib/webhook_endpoints/create/call', event: 'account.updated', path: '/webhooks/account_updated', connect: true
-    include 'modules/stripe/lib/webhook_endpoints/create/call', event: 'checkout.session.completed', path: '/webhooks/checkout_session_completed', connect: false
+    include 'modules/stripe/lib/webhook_endpoints/create/call', stripe_event: 'account.updated', path: '/webhooks/account_updated', connect: true
+    include 'modules/stripe/lib/webhook_endpoints/create/call', stripe_event: 'checkout.session.completed', path: '/webhooks/checkout_session_completed', connect: false
   endif
   return_rc object
 %}
