--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -3,7 +3,11 @@
 
   <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{{ item_url }}">
     {% assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.name %}
-    {% assign cover_url = item.photos | last | dig: 'photo', 'versions', 'small' | default: dummy_url %}
+    {% if item.photos.size > 0 %}
+      {% assign cover_url = item.photos | last | dig: 'photo', 'versions', 'small' | default: dummy_url %}
+    {% else %}
+      {% assign cover_url = item.cover_photo_url %}
+    {% endif %}
     <img alt="{{ item.name }}" class="block object-cover object-center w-full h-full" src="{{ cover_url }}">
   </a>
 
