--- a/app/views/partials/theme/simple/home/sort_form.liquid
+++ b/app/views/partials/theme/simple/home/sort_form.liquid
@@ -4,10 +4,10 @@
     <span>{{ 'app.total_entries' | t }} {{ items.total_entries }}</span>
   </div>
 
-  <div class="ml-auto">
+  <div class="ml-auto flex-row">
     <label for="sort" class="text-right ">Sort by</label>
-    <select class="w-full form-select" id="sort" name="sort">
-      <option value="" class="">Choose sorting</option>
+    <select class="form-select" id="sort" name="sort">
+      <option value="" class="">{% print 'lib.sort_options.relevance' | t %}</option>
       {% for s in filters.sort_options %}
         <option value="{{ s[0] }}" {% if filters.query.sort == s[0] %}selected{% endif %}>{{ s[1] }}</option>
       {% endfor %}
