--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -56,21 +56,16 @@
 
       <div class="flex mt-4">
         <span class="text-2xl text-gray-900 ">{{ item.price | pricify_cents }}</span>
-        {% if item.status.name != 'app.item_statuses.sold' %}
+
         <form action="/orders/new" method="get" class="ml-auto ">
           <input type="hidden" name="item_id" value="{{ item.id }}">
           <button id="buybutton" class="button">
             Buy for {{ item.price | pricify_cents }}
           </button>
+          {% if item.orders.size > 0 %}
+          <div>{% print 'app.items.ordered_times' | t: count: item.orders.size %}</div>
+          {% endif %}
         </form>
-        {% else %}
-        <form action="/orders/new" method="get" class="ml-auto ">
-          <input type="hidden" name="item_id" value="{{ item.id }}">
-          <button class="button" disabled>
-            Sold
-          </button>
-        </form>
-        {% endif %}
       </div>
 
         {%- if item.owner.id == context.current_user.id and item.orders.size < 1 %}
