--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -2,12 +2,7 @@
   {% function_rc item_url = 'link_to', item: item %}
 
   <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{{ item_url }}">
-    {% assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.name %}
-    {% if item.photos.size > 0 %}
-      {% assign cover_url = item.photos | first | dig: 'photo', 'versions', 'small' | default: dummy_url %}
-    {% else %}
-      {% assign cover_url = item.cover_photo_url %}
-    {% endif %}
+    {% function_rc cover_url = 'theme/simple/items/cover_url', item: item %}
     <img alt="{{ item.name }}" class="block object-cover object-center w-full h-full" src="{{ cover_url }}">
   </a>
 
