--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -19,8 +19,7 @@
           <div role="tablist" class="py-4 glider-dots"></div>
         </div>
       {% else %}
-        {%- assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.name %}
-        {%- assign cover_url = item.photos.last.photo.versions.uncropped | default: dummy_url %}
+        {% function_rc cover_url = 'theme/simple/items/cover_url', item: item %}
         <img alt="{{ item.name }}" class="object-center w-full h-full rounded" src="{{ cover_url }}">
       {% endif %}
     </div>
