--- a/app/views/partials/lib/commands/order_statuses/create.liquid
+++ b/app/views/partials/lib/commands/order_statuses/create.liquid
@@ -1,7 +1,20 @@
 {% liquid
+  function_rc order = 'lib/queries/orders/find', id: order_id
+
   function_rc object = 'lib/commands/order_statuses/create/build', order: order, current_user_id: current_user_id, name: name
   function_rc object = 'lib/commands/order_statuses/create/check', object: object
-  function_rc object = 'lib/commands/order_statuses/create/execute', object: object
+
+  if object.valid
+    function_rc object = 'lib/commands/order_statuses/create/execute', object: object
+
+    if object.valid
+      include 'lib/commands/events/create', type: 'order_status_created', actor_id: current_user_id, target_id: object.order_id, object_id: object.id
+    endif
+
+  else
+    echo object
+    echo 'failed'
+  endif
 
   return_rc object
 %}
