--- a/app/views/partials/lib/commands/users/create/execute.liquid
+++ b/app/views/partials/lib/commands/users/create/execute.liquid
@@ -1,6 +1,5 @@
 {% liquid
-  graphql result = 'users/create', args: object
+  graphql r = 'users/create', args: object
 
-  assign id = result | dig: 'user', 'id'
-  export id, namespace: 'object'
+  return_rc r.user
 %}
