--- a/app/views/partials/theme/simple/admin/menu.liquid
+++ b/app/views/partials/theme/simple/admin/menu.liquid
@@ -1,10 +1,10 @@
 <div class="w-full">
   <h2 class="mb-3 text-lg font-medium text-gray-900 title-font">
-    <a class="mr-2" href='/marketplace_setup'>Marketplace Setup</a>
-    <a class="mr-2" href='/admin/users'>Users</a>
-    <a class="mr-2" href='/admin/orders'>Orders</a>
-    <a class="mr-2" href='/admin/items'>Items</a>
-    <a class="mr-2" href='/admin/categories'>Categories</a>
-    <a class="mr-2" href='/admin/activities'>Activities</a>
+    <a class="mr-2 px-3 {% if section == 'marketplace_setup' %}text-2xl bg-gray-300{% endif %}" href='/marketplace_setup'>Marketplace Setup</a>
+    <a class="mr-2 px-3 {% if section == 'users' %}text-2xl bg-gray-300{% endif %}" href='/admin/users'>Users</a>
+    <a class="mr-2 px-3 {% if section == 'orders' %}text-2xl bg-gray-300{% endif %}" href='/admin/orders'>Orders</a>
+    <a class="mr-2 px-3 {% if section == 'items' %}text-2xl bg-gray-300{% endif %}" href='/admin/items'>Items</a>
+    <a class="mr-2 px-3 {% if section == 'categories' %}text-2xl bg-gray-300{% endif %}" href='/admin/categories'>Categories</a>
+    <a class="mr-2 px-3 {% if section == 'activities' %}text-2xl bg-gray-300{% endif %}" href='/admin/activities'>Activities</a>
   </h2>
 </div>
