--- a/app/views/pages/users/create.liquid
+++ b/app/views/pages/users/create.liquid
@@ -7,12 +7,12 @@ method: post
   function_rc object = 'lib/commands/users/create/check', object: object
 
   if object.valid
-    function_rc object = 'lib/commands/users/create/execute', object: object
+    function_rc db_object = 'lib/commands/users/create/execute', object: object
 
-    if object.valid
+    if db_object.valid
       function_rc session = 'lib/commands/sessions/create/execute', object: object
 
-      include 'lib/commands/events/create', type: 'account_created', actor_id: object.id
+      include 'lib/commands/events/create', type: 'account_created', actor_id: db_object.id
 
       include 'redirect_to', url: '/dashboard', notice: 'app.account.created'
     else
