--- a/app/views/partials/theme/simple/admin/menu.liquid
+++ b/app/views/partials/theme/simple/admin/menu.liquid
@@ -1,6 +1,7 @@
 <div class="w-full">
   <h2 class="mb-3 text-lg font-medium text-gray-900 title-font">
     <a class="mr-2 px-3 {% if section == 'marketplace_setup' %}text-2xl bg-gray-300{% endif %}" href='/marketplace_setup'>Marketplace Setup</a>
+    <a class="mr-2 px-3 {% if section == 'admin' %}text-2xl bg-gray-300{% endif %}" href='/admin'>Home</a>
     <a class="mr-2 px-3 {% if section == 'users' %}text-2xl bg-gray-300{% endif %}" href='/admin/users'>Users</a>
     <a class="mr-2 px-3 {% if section == 'orders' %}text-2xl bg-gray-300{% endif %}" href='/admin/orders'>Orders</a>
     <a class="mr-2 px-3 {% if section == 'items' %}text-2xl bg-gray-300{% endif %}" href='/admin/items'>Items</a>
