--- a/app/views/partials/lib/data/queries/items/search.liquid
+++ b/app/views/partials/lib/data/queries/items/search.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function_rc query = 'lib/data/queries/items/search/build', limit: 9, featured: true
+  function_rc query = 'lib/data/queries/items/search/build', limit: limit, owner: owner
   function_rc items = 'lib/data/queries/items/search/execute', query: query
 
   return_rc items
