--- a/app/views/partials/lib/data/queries/items/search/build.liquid
+++ b/app/views/partials/lib/data/queries/items/search/build.liquid
@@ -1,3 +1,14 @@
+{% parse_json query %}
+{
+  "limit": {{ limit | default: 20 }},
+  "keyword": {{ query.k | json }},
+  "sort": {{ sort_options[query.sort] | json }},
+  "owner": {{ owner | json }},
+  "category": {{ query.category | json }}
+
+}
+{% endparse_json %}
+
 {% parse_json sort_options %}
 {
    "price_desc": { "properties": { "name": "price", "order": "DESC" }},
@@ -6,15 +17,6 @@
    "name_asc": { "properties": { "name": "name", "order": "ASC" }},
    "created_at_desc": { "created_at": { "order": "DESC" }},
    "created_at_asc": { "created_at": { "order": "ASC" }}
-}
-{% endparse_json %}
-
-{% parse_json query %}
-{
-  "limit": {{ limit | default: 20 }},
-  "keyword": {{ query.k | json }},
-  "sort": {{ sort_options[query.sort] | json }},
-  "category": {{ query.category | json }}
 }
 {% endparse_json %}
 
