--- a/app/views/partials/lib/commands/order_statuses/create.liquid
+++ b/app/views/partials/lib/commands/order_statuses/create.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function_rc order = 'lib/queries/orders/find', id: order_id
+  function_rc order = 'lib/data/queries/orders/find', id: order_id
 
   function_rc object = 'lib/commands/order_statuses/create/build', order: order, current_user_id: current_user_id, name: name
   function_rc object = 'lib/commands/order_statuses/create/check', object: object
