--- a/app/views/pages/admin.html.liquid
+++ b/app/views/pages/admin.html.liquid
@@ -2,6 +2,6 @@
   include 'lib/must_be_authenticated'
   include 'lib/must_be_superadmin'
 
-  include 'theme/simple/admin/menu', section: 'admin'
+  include 'theme/simple/admin/menu', section: 'home'
   include 'theme/simple/admin/recent', list: list, section: section
 %}
