--- a/app/views/partials/theme/simple/admin/menu.liquid
+++ b/app/views/partials/theme/simple/admin/menu.liquid
@@ -1,11 +1,11 @@
 <div class="w-full">
   <h2 class="mb-3 text-lg font-medium text-gray-900 title-font">
-    <a class="mr-2 px-3 {% if section == 'marketplace_setup' %}text-2xl bg-gray-300{% endif %}" href='/marketplace_setup'>Marketplace Setup</a>
-    <a class="mr-2 px-3 {% if section == 'admin' %}text-2xl bg-gray-300{% endif %}" href='/admin'>Home</a>
-    <a class="mr-2 px-3 {% if section == 'users' %}text-2xl bg-gray-300{% endif %}" href='/admin/users'>Users</a>
-    <a class="mr-2 px-3 {% if section == 'orders' %}text-2xl bg-gray-300{% endif %}" href='/admin/orders'>Orders</a>
-    <a class="mr-2 px-3 {% if section == 'items' %}text-2xl bg-gray-300{% endif %}" href='/admin/items'>Items</a>
-    <a class="mr-2 px-3 {% if section == 'categories' %}text-2xl bg-gray-300{% endif %}" href='/admin/categories'>Categories</a>
-    <a class="mr-2 px-3 {% if section == 'activities' %}text-2xl bg-gray-300{% endif %}" href='/admin/activities'>Activities</a>
+    <a class="mr-2 px-3 {% if section == 'home' %}bg-gray-300{% endif %}" href='/admin'>{% print 'admin.menu.home' | t %}</a>
+    <a class="mr-2 px-3 {% if section == 'users' %}bg-gray-300{% endif %}" href='/admin/users'>{% print 'admin.menu.users' | t %}</a>
+    <a class="mr-2 px-3 {% if section == 'orders' %}bg-gray-300{% endif %}" href='/admin/orders'>{% print 'admin.menu.orders' | t %}</a>
+    <a class="mr-2 px-3 {% if section == 'items' %}bg-gray-300{% endif %}" href='/admin/items'>{% print 'admin.menu.items' | t %}</a>
+    <a class="mr-2 px-3 {% if section == 'categories' %}bg-gray-300{% endif %}" href='/admin/categories'>{% print 'admin.menu.categories' | t %}</a>
+    <a class="mr-2 px-3 {% if section == 'activities' %}bg-gray-300{% endif %}" href='/admin/activities'>{% print 'admin.menu.activities' | t %}</a>
+    <a class="mr-2 px-3 {% if section == 'setup' %}bg-gray-300{% endif %}" href='/marketplace_setup'>{% print 'admin.menu.setup' | t %}</a>
   </h2>
 </div>
