--- a/app/views/partials/theme/simple/admin/recent.liquid
+++ b/app/views/partials/theme/simple/admin/recent.liquid
@@ -14,6 +14,7 @@
   {% for metric in metrics %}
     <div class="p-8 m-2 flex-row border">
       <div class="text-2xl justify-center">
+        Fake
         {% print 'admin.metric.' | append: metric.name | t %}
       </div>
       <div class="text-xl justify-center">
