--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -40,6 +40,7 @@
         </ul>
       </div>
 
+      {% comment %}
       <div class="flex flex-wrap mb-4">
         {%- if item.tags.size > 0 %}
         <ul class="flex w-full tags">
@@ -50,6 +51,7 @@
         </ul>
         {%- endif %}
       </div>
+      {% endcomment %}
 
       <p class="mt-4 leading-relaxed">{{ item.description }}</p>
 
