--- a/app/views/pages/admin.html.liquid
+++ b/app/views/pages/admin.html.liquid
@@ -3,5 +3,14 @@
   include 'lib/must_be_superadmin'
 
   include 'theme/simple/admin/menu', section: 'home'
-  include 'theme/simple/admin/recent', list: list, section: section
+
+  assign today = 'now' | to_date | json
+  assign yesterday = 'yesterday' | to_date | json
+
+  function_rc today = 'lib/data/queries/metrics/find', limit: 1, date: today
+  function_rc yesterday = 'lib/data/queries/metrics/find', limit: 1, date: yesterday
+
+  function_rc report = 'lib/commands/metrics/report', today: today, yesterday: yesterday
+
+  include 'theme/simple/admin/recent', metrics: report
 %}
