--- a/app/views/partials/theme/simple/admin/items/index.liquid
+++ b/app/views/partials/theme/simple/admin/items/index.liquid
@@ -1,9 +1,5 @@
 <div class="w-full text-xs">
-  <div class="">
-    <h2 class="mb-6 text-2xl">{% echo 'app.' | append: section | append: '.list' | t %} ({% print list.total_entries %})</h2>
-  </div>
-
-  <div class="flex">
+  <div class="flex border-b">
     <div class="flex-1 my-2 px-2 text-xl ">
       {% print 'app.items.attr.name' | t %}
     </div>
