--- a/app/views/partials/theme/simple/admin/recent.liquid
+++ b/app/views/partials/theme/simple/admin/recent.liquid
@@ -1,25 +1,38 @@
-{% parse_json metrics %}
-[
-  {"name": "total_revenue", "value": "$3249"},
-  {"name": "total_users", "value": "3249"},
-  {"name": "new_users", "value": "+4%"},
-  {"name": "total_items", "value": "3249"},
-  {"name": "new_items", "value": "+1%"},
-  {"name": "total_orders", "value": "3249"},
-  {"name": "new_orders", "value": "+2%"}
-]
-{% endparse_json %}
+<section class="py-8 px-4">
+  <div class="flex flex-wrap -mx-4">
+    {% for metric in metrics %}
+      <div class="w-full lg:w-1/4 px-4 mb-4 lg:mb-0">
+        <div class="h-full border rounded shadow">
+          <div class="flex items-center justify-between py-3 px-4 border-b">
+            <h3 class="text-lg font-heading">
+              {% print 'admin.metric.name.'| append: metric.name | t %}
+            </h3>
+            <span class="py-1 px-3 text-sm text-white font-semibold bg-green-500 rounded-full">
+              {% print 'admin.metric.period.'| append: metric.period | t %}
+            </span>
+          </div>
+          <div class="flex flex-col p-4">
+            <h3 class="text-3xl mb-3 font-heading font-semibold">
+              {% if metric.name == 'income' %}
+                {% print metric.value | pricify_cents %}
+              {% else %}
+                {% print metric.value %}
+              {% endif %}
+            </h3>
+            <span>
+              {% print 'admin.metric.delta_name.' | append: metric.name | t %}
+            </span>
+            <span class="text-green-500">
+              {% if metric.name == 'income' %}
+                {% print metric.delta | pricify_cents %}
+              {% else %}
+                {% print metric.delta %}
+              {% endif %}
+            </span>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</section>
 
-<div class="flex items-center justify-center flex-wrap">
-  {% for metric in metrics %}
-    <div class="p-8 m-2 flex-row border">
-      <div class="text-2xl justify-center">
-        Fake
-        {% print 'admin.metric.' | append: metric.name | t %}
-      </div>
-      <div class="text-xl justify-center">
-        {% print metric.value %}
-      </div>
-    </div>
-  {% endfor %}
-</div>
