--- a/app/views/partials/lib/commands/metrics/create.liquid
+++ b/app/views/partials/lib/commands/metrics/create.liquid
@@ -1,5 +1,27 @@
 {% liquid
-  function_rc object = 'lib/commands/metrics/create/build', items_count: items_count, users_count: users_count, orders_count: orders_count, income_income: income
+  assign income = 0
+  function_rc orders = 'lib/data/queries/orders/search', limit: 100
+
+  for order in orders.results
+    if order.status.name == 'app.order_statuses.paid'
+      assign income = income | plus: order.total
+    endif
+  endfor
+
+  function_rc items = 'lib/data/queries/items/search', limit: 1
+  function_rc users = 'lib/data/queries/users/search', limit: 1
+%}
+
+{%
+  function_rc object = 'lib/commands/metrics/create/build',
+    items:  items.total_entries,
+    users:  users.total_entries,
+    orders: orders.total_entries,
+    income: income,
+    name: 'total'
+%}
+
+{% liquid
   function_rc object = 'lib/commands/metrics/create/check', object: object
   function_rc object = 'lib/commands/metrics/create/execute', object: object
 
