Add username to registration

--- a/app/views/partials/lib/commands/users/create/build.liquid
+++ b/app/views/partials/lib/commands/users/create/build.liquid
@@ -2,6 +2,7 @@
   {
     "email":       {{ object.email | json }},
     "password":    {{ object.password | json }},
+    "username":    {{ object.username | json }},
     "remember_me": true
   }
 {% endparse_json %}
