--- a/app/views/partials/theme/simple/users/form.liquid
+++ b/app/views/partials/theme/simple/users/form.liquid
@@ -2,6 +2,14 @@
   {% include 'authenticity_token' %}
 
   <label class="block mt-3" for="email">
+    <span class="block">Username</span>
+    <input name="user[username]" type="text" id="username" value="{{ object.username }}" class="w-full form-input" autofocus />
+    {% if object.errors.username %}
+      <span class="text-red-800">{{ object.errors.username }}</span>
+    {% endif %}
+  </label>
+
+  <label class="block mt-3" for="email">
     <span class="block">E-mail</span>
     <input name="user[email]" type="email" id="email" value="{{ object.email }}" class="w-full form-input" autofocus />
     {% if object.errors.email %}
